NetworkPolicy/mongodb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-ingress
  namespace: test
spec:
  podSelector:
    matchLabels:
      component: mongodb
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: catalogue
    - podSelector:
        matchLabels:
          name: user
    ports:
    - protocol: TCP
      port: 27017
