NetworkPolicy/redis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: test
  name: redis-ingress
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: user
    - podSelector:
        matchLabels:
          name: cart
    ports:
    - protocol: TCP
      port: 6379
